# RapidFantasyRemake

./: Cargo.toml  README.md
.cargo/: config.toml
src/: battle.rs  enemy_table.rs  global.rs  item_table.rs  lose.rs  main.rs  mainmenu.rs  overworld.rs  player_attack_table.rs
src/battle/: mod.rs  styles.rs
src/lose/: mod.rs  styles.rs
src/menu/: mod.rs  styles.rs
