[package]
name = "rapid_fantasy_remake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_asset_loader = "0.10"
queues = "1.0.2"
# NOTE: Remember to revert this before releasing your game! Otherwise you will need to include
#  libbevy_dylib alongside your game if you want it to run. If you remove the "dynamic" feature,
#  your game executable can run standalone.